<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_identificadorActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/identificador"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/tv_identificadorBD"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_identificadorActualizar"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/tv_nombreActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_identificadorBD"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nombre"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/et_nombreActualizar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombreActualizar"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25dp"
        android:textCursorDrawable="@color/black"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nombreActualizar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/actualizar"
        android:textSize="20dp"
        android:onClick="clickActualizar"/>

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/eliminar"
        android:textSize="20dp"
        android:onClick="clickEliminar"/>

    <Button
        android:id="@+id/btn_votar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_eliminar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/votar"
        android:textSize="20dp"
        android:onClick="clickVotar"/>

</androidx.constraintlayout.widget.ConstraintLayout>