<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_identificador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/identificador"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/et_identificador"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_identificador"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25dp"
        android:textCursorDrawable="@color/black"
        android:backgroundTint="@color/black"/>

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_identificador"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nombre"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="25dp"
        android:textCursorDrawable="@color/black"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/btn_insertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/a_adir"
        android:textSize="20dp"
        android:onClick="clickInsertarBD"/>

</androidx.constraintlayout.widget.ConstraintLayout>